infra/mailhog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailhog
spec:
  #type: NodePort   # <<<<<< ALTERADO AQUI
  type: ClusterIP 
  selector:
    app: mailhog
  ports:
    - name: mailhog-smtp
      protocol: TCP 
      port: 1025 # Porta exposta internamente no Cluster (para outros serviços)
      targetPort: 1025 # Porta no container (onde o Postgres realmente escuta)
      #nodePort: 31025 # Porta exposta externamente no Node (acesso de fora do cluster)
    - name: mailhog-web
      protocol: TCP 
      port: 8025 # Porta exposta internamente no Cluster (para outros serviços)
      targetPort: 8025 # Porta no container (onde o Postgres realmente escuta)
      #nodePort: 30025 # Porta exposta externamente no Node (acesso de fora do cluster)
