infra/mailhog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailhog-ingress
  namespace: mailhog
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx # deve bater com o IngressClass que o Ingress Controller do NGINX está usando. Veja com: kubectl get ingressclass
  rules:
  - host: mailhog.localhost  # O domínio que você usará para acessar a app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mailhog
            port:
              number: 8025  # Porta do serviço exposto
